--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,13 @@
     "lib": [
       "es2018",
       "dom"
-    ]
+    ],
+    "paths": {
+      "ng-utf8-emojis-to-images": [
+        "dist/ng-utf8-emojis-to-images/ng-utf8-emojis-to-images",
+        "dist/ng-utf8-emojis-to-images"
+      ]
+    }
   },
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
