--- a/projects/ng-utf8-emojis-to-images/package.json
+++ b/projects/ng-utf8-emojis-to-images/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng-utf8-emojis-to-images",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "Angular6+ pipe to transform HTML containing unicode emojis to HTML containing emoji image elements",
   "author": "Florian Lentsch",
   "license": "MIT",
@@ -10,9 +10,9 @@
     "url": "https://github.com/lentschi/ng-utf8-emojis-to-images"
   },
   "peerDependencies": {
-    "@angular/common": ">=6.0.0 <10.0.0 || >7.0.0-beta <10.0.0",
-    "@angular/core": ">=6.0.0 <10.0.0 || >7.0.0-beta <10.0.0",
-    "tslib": "^1.10.0",
+    "@angular/common": ">=6.0.0 <12.0.0 || >7.0.0-beta <12.0.0",
+    "@angular/core": ">=6.0.0 <12.0.0 || >7.0.0-beta <12.0.0",
+    "tslib": ">=1.4.0 <3.0.0",
     "@ctrl/ngx-emoji-mart": "^4.1.0"
   }
 }
